--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cors": "^2.8.4",
     "crypto-js": "^3.1.9-1",
     "express": "^4.16.3",
+    "json-concat": "0.0.1",
     "jsonwebtoken": "^8.2.1",
     "morgan": "^1.9.0",
     "mssql": "^3.3.0",
